@@ -21,7 +21,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: file.c,v 1.421 2006/03/02 13:12:45 dmitry Exp $ */
+/* $Id: file.c,v 1.422 2006/03/06 14:27:45 iliaa Exp $ */
 
 /* Synced with php 3.0 revision 1.218 1999-06-16 [ssb] */
 
@@ -1473,6 +1473,10 @@ PHP_FUNCTION(umask)
 
 	oldumask = umask(077);
 
+	if (BG(umask) != -1) {
+		BG(umask) = oldumask;
+	}
+
 	if (arg_count == 0) {
 		umask(oldumask);
 	} else {
@@ -1482,8 +1486,6 @@ PHP_FUNCTION(umask)
 		convert_to_long_ex(arg1);
 		umask(Z_LVAL_PP(arg1));
 	}
-
-	/* XXX we should maybe reset the umask after each request! */
 
 	RETURN_LONG(oldumask);
 }
